Changelog
=========

1.0 (xxxx-xx-xx)
------------------

 - Created recipe with ZopeSkel [Christian Schneider, 4teamwork GmbH].