@@ -10,66 +10,24 @@
 \titlespacing{\subsubsection}{0pt}{*0}{*0}\renewcommand\arraystretch{1.5}
 
 
-% checkbox command
-\newcommand{\checkbox}[1]{
-    \tiny
-    \setlength{\tabcolsep}{3pt}
-    \begin{tabular}{|p{5pt}|}
-        \hline
-        \tiny #1 \\
-        \hline
-    \end{tabular}
-    \normalsize
-}
-
-
-% meetingitem command
-\newcommand{\meetingitem}[2]{
-    \rule[1ex]{18.5cm}{1pt}
-    {\bf #1}
-    \marginpar{
-        \vspace{-4mm}
-        \begin{tabular}{|p{5cm}}
-            #2 \\
-        \end{tabular}
-    }
-}
-
-% meetingitemtextblock command
-\newcommand{\meetingitemtextblock}[2]{{\list{}{\setlength{\leftmargin}{0cm}\setlength{\rightmargin}{0cm}}\relax}{\endlist}{\bf #1: }#2}
-% XXX DEPRECATED!
-\renewcommand{\meetingitemtextblock}[2]{{\bf #1:} #2 \\}
-
-
-% meetingitemheader command
-\newcommand{\meetingitemheader}{
-    \marginpar{
-        \vspace{-4mm}
-        \begin{tabular}{p{5cm}}
-            Verantwortung \\
-        \end{tabular}
-    }
-}
-
-
-% attendeeList command
-\newenvironment{attendeeList}{
-    \begin{tabular}{|l|c|c|}
-    \hline
-    {\bf Teilnemher} & {\bf Anwesend} & {\bf Entschuldigt} \\
-    \hline
-}{
-    \hline
+\newcounter{meetingCounter}
+\setcounter{meetingCounter}{0}
+\newcommand{\meeting}[4]{
+    \addtocounter{meetingCounter}{1}
+    \paragraph{\arabic{meetingCounter}. #1}
+    #2
+    \def\third{#3}%
+    \def\nothing{}%
+    \ifx\third\nothing
+        \newline
+    \else
+        \\{\bf Ergebnis:}
+        #3\newline
+    \fi
+    \begin{tabular}{p{.99\textwidth}}
+        \raggedleft
+        {\small\em #4}
     \end{tabular}
 }
-
-
-% attendee command
-% \attendee{NAME}{PRESENT}{EXCUSED}
-% e.g. \attendee{Hans Muster}{X}{}
-\newcommand{\attendee}[3]{
-    #1 & \checkbox{#2} & \checkbox{#3} \\
-}
-
 
 % --------------------------------------------------------
